[package]
name = "bi-directional-pipe"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/luyikk/Bi-directional-Pipe"
documentation = "https://docs.rs/bi-directional-pipe"
description = "async bi-directional pipe."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
anyhow="1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
panic="abort"
lto = "fat"
codegen-units = 1